# django-fac

./: .gitignore  LICENSE  README.md  README.rst  build.sh  manage.py  setup.cfg  setup.cfg   setup.py
dev/: develop.sh  manage.py  requirements.txt
dev/.docker/: Dockerfile  docker-compose.yml
dev/django_fac_integration/: asgi.py  settings.py  urls.py  wsgi.py
dev/fac_example/: apps.py  forms.py  urls.py  views.py
dev/fac_example/templates/fac_example/: base.template.html  payment.html  success.html
django-fac/: apps.py  fac_core.py  tests.py  urls.py  views.py
django-fac/core/: constants.py  entities.py  utils.py
django_fac/: apps.py  asgi.py  settings.py  urls.py  wsgi.py
django_fac/core/: constants.py  entities.py  payment.py  utils.py
docs/api-guide/: entities.md
tests/: test_utils.py
