[metadata]
name = django-fac
# https://peps.python.org/pep-0440/#examples-of-compliant-version-schemes
version = 0.1.dev1
author = Davane Davis
author_email = ddavis@realdecoy.com
description = django-fac is a Django app to conduct that is used to integrate with First Atlantic Commerce payment gateway
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/realdecoy/django-fac/
license = MIT
classifiers =
    Environment :: Web Environment
    Development Status :: 1 - Planning
    Framework :: Django
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages=find:
python_requires = >=3.7
setup_requires =
    setuptools >= 40.8.0
install_requires =
    Django>=2.2.2
    requests>=2.22.0

[options.packages.find]
exclude =
    dev*
    docs*
    tests*